--- a/configure.ac
+++ b/configure.ac
@@ -33,6 +33,11 @@ PKG_CHECK_MODULES(SYSINFOD, [glib-2.0 dbus-glib-1])
 AC_SUBST(SYSINFOD_LIBS)
 AC_SUBST(SYSINFOD_CFLAGS)
 
+PKG_CHECK_MODULES(SYSINFO, [libcal])
+
+AC_SUBST(SYSINFO_LIBS)
+AC_SUBST(SYSINFO_CFLAGS)
+
 AC_OUTPUT([
 Makefile
 src/Makefile
